Feature/snomio 31 7 box model (#194)
* added initial stab at product model rest call

* added missing problems

* added missing dependency, device support, and graph response

* Ui changes and merging main

* Temp commit

* temp-commit

* Temp commit

* test fixes

* added tests and some refactoring

* 7Box model UI

* 7Box model UI

* changes to add atomic data extract

* fixed bad merge

* added in device atomic data

* build repository fix

* format and code style fixes

* format change

* pom refactor

* generics type refactor

* 7Box model UI

* 7Box model UI

* 7Box model UI

* 7Box model UI

* 7Box model UI

---------

Co-authored-by: Dion McMurtrie <dion.mcmurtrie@csiro.au>